# Copyright 2016 The Chromium Embedded Framework Authors. Portions copyright
# 2014 the Chromium Authors. All rights reserved. Use of this source code is
# governed by a BSD-style license that can be found in the LICENSE file.

import("//tools/json_schema_compiler/json_features.gni")

json_features("cef_api_features") {
  feature_type = "APIFeature"
  method_name = "AddCEFAPIFeatures"
  sources = [
    "_api_features.json",
  ]
}

json_features("cef_permission_features") {
  feature_type = "PermissionFeature"
  method_name = "AddCEFPermissionFeatures"
  sources = [
    "_permission_features.json",
  ]
}

json_features("cef_manifest_features") {
  feature_type = "ManifestFeature"
  method_name = "AddCEFManifestFeatures"
  sources = [
    # Use the same manifest features as Chrome.
    "//chrome/common/extensions/api/_manifest_features.json",
  ]
}

group("extensions_features") {
  public_deps = [
    ":cef_api_features",
    ":cef_manifest_features",
    ":cef_permission_features",
    "//extensions/common/api:extensions_features",
  ]
}
