# Copyright 2016 The Chromium Embedded Framework Authors. Portions copyright
# 2014 the Chromium Authors. All rights reserved. Use of this source code is
# governed by a BSD-style license that can be found in the LICENSE file.

gypi_values = exec_script("//build/gypi_to_gn.py",
                          [ rebase_path("schemas.gypi") ],
                          "scope",
                          [ "schemas.gypi" ])

sources = gypi_values.schema_files

uncompiled_sources = gypi_values.non_compiled_schema_files

root_namespace = "extensions::api::%(namespace)s"
schema_include_rules = "//cef/libcef/browser/extensions/api:extensions::api::%(namespace)s"
schema_dependencies = [ "//extensions/common/api" ]
