# Copyright 2016 The Chromium Embedded Framework Authors. Portions copyright
# 2014 the Chromium Authors. All rights reserved. Use of this source code is
# governed by a BSD-style license that can be found in the LICENSE file.

schema_sources = [
  # TODO(cef): Add CEF-specific Mojo APIs here.
]

uncompiled_sources = [
]

root_namespace = "extensions::api::cef::%(namespace)s"
schema_include_rules = "//cef/libcef/browser/extensions/api:extensions::api::cef::%(namespace)s"
schema_dependencies = [ "//extensions/common/api" ]
